[Fix] white space in block erased

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -50,6 +50,7 @@
     font-weight: 400;
     margin-top: 0;
     padding-left: 30px;
+    margin-bottom: 17px;
 }
 
 .filters ul {
